openshift/network-policy/deployment/rogue/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rogue
  namespace: rogue
  labels:
    app: rogue
    app.kubernetes.io/comproguent: rogue
    app.kubernetes.io/instance: rogue
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: rogue
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: rogue
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: rogue
          image: quay.io/marrober/layers:31
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
